maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:91: error: ')' expected but '}' found.
        }
        ^